--- a/Styles/OtherStyles.xaml
+++ b/Styles/OtherStyles.xaml
@@ -2,14 +2,23 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Niero">
 
-    <Style x:Key="InfoBorder" TargetType="Border">
+    <Style x:Key="MovableBorder" TargetType="Border">
         <Style.Setters>
             <Setter Property="CornerRadius" Value="0"/>
-            <Setter Property="BorderBrush" Value="{StaticResource OverflowBrush}"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="Opacity" Value="0"/>
             <Setter Property="Effect" Value="{StaticResource PressedSurfaceBlockShadow}"/>
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="ClassicBorder" TargetType="Border">
+        <Style.Setters>
+            <Setter Property="CornerRadius" Value="0"/>
+            <Setter Property="Background" Value="{StaticResource OverlayLightBrush}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Opacity" Value="1"/>
+            <Setter Property="Effect" Value="{StaticResource SurfaceBlockShadow}"/>
         </Style.Setters>
     </Style>
 
@@ -42,6 +51,11 @@
                     </BeginStoryboard>
                 </Trigger.ExitActions>
             </Trigger>
+            <EventTrigger RoutedEvent="MouseEnter">
+                <EventTrigger.Actions>
+                    <SoundPlayerAction Source="Sounds\EnterAction.wav"/>
+                </EventTrigger.Actions>
+            </EventTrigger>
         </Style.Triggers>
     </Style>
 
