--- a/App.xaml
+++ b/App.xaml
@@ -9,10 +9,15 @@
                 <ResourceDictionary Source="DesignDictionaries/Themes/NierAutomataTheme.xaml"/>
                 <ResourceDictionary Source="DesignDictionaries/FontsNames.xaml"/>
 
+                <ResourceDictionary Source="Styles/BorderStyles.xaml"/>
                 <ResourceDictionary Source="Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="Styles/ComboBoxStyles.xaml"/>
                 <ResourceDictionary Source="Styles/DataGridStyles.xaml"/>
                 <ResourceDictionary Source="Styles/OtherStyles.xaml"/>
+                <ResourceDictionary Source="Styles/ProgressBarStyles.xaml"/>
                 <ResourceDictionary Source="Styles/TextBlockStyles.xaml"/>
+                <ResourceDictionary Source="Styles/TextBoxStyles.xaml"/>
+                
                 <ResourceDictionary Source="Templates/ButtonTemplates.xaml"/>
                 <ResourceDictionary Source="Templates/TextBoxTemplates.xaml"/>
             </ResourceDictionary.MergedDictionaries>
