--- a/Styles/OtherStyles.xaml
+++ b/Styles/OtherStyles.xaml
@@ -2,25 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Niero">
 
-    <Style x:Key="MovableBorder" TargetType="Border">
-        <Style.Setters>
-            <Setter Property="CornerRadius" Value="0"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Opacity" Value="0"/>
-            <Setter Property="Effect" Value="{StaticResource PressedSurfaceBlockShadow}"/>
-        </Style.Setters>
-    </Style>
-
-    <Style x:Key="ClassicBorder" TargetType="Border">
-        <Style.Setters>
-            <Setter Property="CornerRadius" Value="0"/>
-            <Setter Property="Background" Value="{StaticResource OverlayLightBrush}"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Opacity" Value="1"/>
-            <Setter Property="Effect" Value="{StaticResource SurfaceBlockShadow}"/>
-        </Style.Setters>
-    </Style>
+    <!-- Styles -->
 
     <Style x:Key="ElementsGridPart" TargetType="Grid">
         <Style.Setters>
@@ -57,32 +39,6 @@
                 </EventTrigger.Actions>
             </EventTrigger>
         </Style.Triggers>
-    </Style>
-
-    <Style x:Key="MainCanvasBorder" TargetType="Border">
-        <Style.Setters>
-            <Setter Property="Margin" Value="10"/>
-            <Setter Property="BorderBrush" Value="{StaticResource BaseBrush}"/>
-            <Setter Property="BorderThickness" Value="2"/>
-        </Style.Setters>
-    </Style>
-
-    <Style x:Key="MoveTextBox" TargetType="TextBox">
-        <Style.Setters>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Foreground" Value="{StaticResource DarkTextBrush}"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="FontFamily" Value="{StaticResource Rodin}"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="Padding" Value="2"/>
-            <Setter Property="TextAlignment" Value="Center"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="TextWrapping" Value="Wrap"/>
-            <Setter Property="IsReadOnly" Value="True"/>
-            <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
-            <Setter Property="Template" Value="{DynamicResource TextBoxForMoveBorder}"/>
-        </Style.Setters>
     </Style>
 
 </ResourceDictionary>
